--- a/DicomToVolume-1.0/CMakeLists.txt
+++ b/DicomToVolume-1.0/CMakeLists.txt
@@ -1,12 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
-PROJECT(DCM2MHD)
-
-FIND_PACKAGE(ITK REQUIRED)
-INCLUDE(${ITK_USE_FILE})
+PROJECT(DicomToVolume)
 
 add_executable(dcm2volume dcm2volume.cxx)
 
-IF(ITK_LIBRARIES)
-    TARGET_LINK_LIBRARIES(dcm2volume ${ITK_LIBRARIES})
-ENDIF()
+target_link_libraries(dcm2volume ITK)
