Build sequence works, install dir works

--- a/MindSWMain-1.0/DicomToVolume-1.0/CMakeLists.txt
+++ b/MindSWMain-1.0/DicomToVolume-1.0/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 2.8)
 
 PROJECT(DicomToVolume)
 
+FIND_PACKAGE(ITK REQUIRED)
+INCLUDE(${ITK_USE_FILE})
+
 add_executable(dcm2volume dcm2volume.cxx)
 
-target_link_libraries(dcm2volume ITK)
+TARGET_LINK_LIBRARIES(dcm2volume ${ITK_LIBRARIES})
+
+
+install(TARGETS dcm2volume DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
