--- a/MindSWMain-1.0/CMakeLists.txt
+++ b/MindSWMain-1.0/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.2.2)
 project(mindsw-main)
+
+set (CMAKE_CXX_STANDARD 11)
+
+
 add_subdirectory(DicomToVolume-1.0/)
+
 
 
